syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;

import "io/harness/perpetualtask/ng_peprpetual_task_client.proto";
import "google/protobuf/duration.proto";

message RemotePerpetualTaskSchedule {
  // Interval between successive iterations
  google.protobuf.Duration interval = 1;
  // Timeout for one iteration of the task
  google.protobuf.Duration timeout = 2;
}

message CreateRemotePerpetualTaskRequest {
  string account_id = 1;
  string task_type = 2;
  RemotePerpetualTaskSchedule schedule = 3;
  RemotePerpetualTaskClientContext context = 4;
  bool allow_duplicate = 5;
}

message CreateRemotePerpetualTaskResponse {
  string perpetual_task_id = 1;
}

message DeleteRemotePerpetualTaskRequest {
  string account_id = 1;
  string perpetual_task_id = 2;
}

message DeleteRemotePerpetualTaskResponse {
  bool success = 1;
}

message ResetRemotePerpetualTaskRequest {
  string account_id = 1;
  string perpetual_task_id = 2;
}

message ResetRemotePerpetualTaskResponse {
  bool success = 1;
}